fixed aos issues & overflow issue

--- a/css/media.css
+++ b/css/media.css
@@ -116,21 +116,6 @@
   }
 
   /* footer  */
-
-  /* back to top button  */
-
-  #button {
-    width: 40px;
-    height: 40px;
-    bottom: 20px;
-    right: 20px;
-  }
-
-  #button::after {
-    font-size: 1.3rem;
-  }
-
-  /* back to top button  */
 }
 
 /* Small devices*/
