--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ body {
   font-size: 16px;
   font-weight: var(--regular);
   color: var(--secondary-color);
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 /* global styles  */
